--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
   </ol>
 
    <hr>
-      <p><a href="index.html">Back to the Main Page</a>  <span style="float:right;">This page created as academic activity only.</span></p>
+      <p><a href="../index.html">Back to the Main Page</a>  <span style="float:right;">This page created as academic activity only.</span></p>
 
 
-  <script type="module" src="script.js"></script>
+  <script type="module" src="../script.js"></script>
 
 </body>
